--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -492,12 +492,12 @@
                 <ul>
                     <!-- first row第一列 -->
                     <li>
-                        <h3>2023.1.16</h3>
+                        <h3 class="media_date">2023.1.16</h3>
                         <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分<br> 享插花技巧，快來一起學習吧！</h2>
                         <span class="img"><img src="img/index/index-media/media1.png" alt=""></span>
                         <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知<br>道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                         <div class="more">
-                            <a href="media_page_nov.html">閱讀更多</a>
+                            <a href="media_page_nov.html"><h3>閱讀更多</h3></a>
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </li>
@@ -508,7 +508,7 @@
                         <span class="img"><img src="img/index/index-media/media3.png" alt=""></span>
                         <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知<br>道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                         <div class="more">
-                            <a href="media.html">閱讀更多</a>
+                            <a href="media.html"><h3>閱讀更多</h3></a>
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </li>
@@ -523,7 +523,7 @@
                     <span class="img"><img src="img/index/index-media/media2.png" alt=""></span>
                     <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知<br>道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                     <div class="more">
-                        <a href="media.html">閱讀更多</a>
+                        <a href="media.html"><h3>閱讀更多</h3></a>
                         <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                     </div>
                 </li>
@@ -534,7 +534,7 @@
                     <span class="img"><img src="img/index/index-media/media4.png" alt=""></span>
                     <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                     <div class="more">
-                        <a href="media.html">閱讀更多</a>
+                        <a href="media.html"><h3>閱讀更多</h3></a>
                         <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                     </div>
                 </li>
@@ -548,19 +548,19 @@
                     <span class="img"><img src="img/index/index-media/media6.png" alt=""></span>
                     <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                     <div class="more">
-                        <a href="media.html">閱讀更多</a>
+                        <a href="media.html"><h3>閱讀更多</h3></a>
                         <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                     </div>
                 </li>
                 <!-- </div> -->
                 <!-- second row第二列 -->
                 <li>
-                    <h3>2023.1.16</h3>
+                    <h3 class="media_date">2023.1.16</h3>
                     <h2>【好評回饋】，知名網紅兩孩子的媽Dolly一日<br>驗體</h2>
                     <span class="img"><img src="img/index/index-media/media5.png" alt=""></span>
                     <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                     <div class="more">
-                        <a href="media.html">閱讀更多</a>
+                        <a href="media.html"><h3>閱讀更多</h3></a>
                         <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                     </div>
                 </li>
