--- a/蘵感ZanGan上傳/media.html
+++ b/蘵感ZanGan上傳/media.html
@@ -76,15 +76,15 @@
                 <article class="list_item">
                     <figure><img src="img/index/index-media/media1.png" alt=""></figure>
                     <div class="list_box">
-                        <h4>2023.1.16</h4>
+                        <h4 class="media_date2">2023.1.16</h4>
                         <p>
                         <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學 <br> 習吧！</h2>
                         </p>
                         <p>
                         <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？蘵感工作室<br>特別邀請到插花網...</h3>
                         </p>
-                        <div class="media_more">
-                            <a href="media_page_nov.html">閱讀更多</a>
+                        <div class="more">
+                            <a href="media_page_nov.html"><h3>閱讀更多</h3></a>
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </div>
@@ -92,15 +92,15 @@
                 <article class="list_item">
                     <figure><img src="img/index/index-media/media2.png" alt=""></figure>
                     <div class="list_box">
-                        <h4>2023.1.16</h4>
+                        <h4 class="media_date2">2023.1.16</h4>
                         <p>
                         <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學 <br> 習吧！</h2>
                         </p>
                         <p>
                         <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？蘵感工作室<br>特別邀請到插花網...</h3>
                         </p>
-                        <div class="media_more">
-                            <a href="media.html">閱讀更多</a>
+                        <div class="more">
+                            <a href="media.html"><h3>閱讀更多</h3></a>
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </div>
@@ -108,15 +108,15 @@
                 <article class="list_item">
                     <figure><img src="img/index/index-media/media3.png" alt=""></figure>
                     <div class="list_box">
-                        <h4>2023.1.16</h4>
+                        <h4 class="media_date2">2023.1.16</h4>
                         <p>
                         <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學 <br> 習吧！</h2>
                         </p>
                         <p>
                         <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？蘵感工作室<br>特別邀請到插花網...</h3>
                         </p>
-                        <div class="media_more">
-                            <a href="media.html">閱讀更多</a>
+                        <div class="more">
+                            <a href="media.html"><h3>閱讀更多</h3></a>
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </div>
@@ -124,15 +124,15 @@
                 <article class="list_item">
                     <figure><img src="img/index/index-media/media4.png" alt=""></figure>
                     <div class="list_box">
-                        <h4>2023.1.16</h4>
+                        <h4 class="media_date2">2023.1.16</h4>
                         <p>
                         <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學 <br> 習吧！</h2>
                         </p>
                         <p>
                         <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？蘵感工作室<br>特別邀請到插花網...</h3>
                         </p>
-                        <div class="media_more">
-                            <a href="media.html">閱讀更多</a>
+                        <div class="more">
+                            <a href="media.html"><h3>閱讀更多</h3></a>
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </div>
@@ -140,15 +140,15 @@
                 <article class="list_item">
                     <figure><img src="img/index/index-media/media5.png" alt=""></figure>
                     <div class="list_box">
-                        <h4>2023.1.16</h4>
+                        <h4 class="media_date2">2023.1.16</h4>
                         <p>
                         <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學 <br> 習吧！</h2>
                         </p>
                         <p>
                         <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？蘵感工作室<br>特別邀請到插花網...</h3>
                         </p>
-                        <div class="media_more">
-                            <a href="media.html">閱讀更多</a>
+                        <div class="more">
+                            <a href="media.html"><h3>閱讀更多</h3></a>
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </div>
@@ -156,15 +156,15 @@
                 <article class="list_item">
                     <figure><img src="img/index/index-media/media6.png" alt=""></figure>
                     <div class="list_box">
-                        <h4>2023.1.16</h4>
+                        <h4 class="media_date2">2023.1.16</h4>
                         <p>
                         <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學 <br> 習吧！</h2>
                         </p>
                         <p>
                         <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？蘵感工作室<br>特別邀請到插花網...</h3>
                         </p>
-                        <div class="media_more">
-                            <a href="media.html">閱讀更多</a>
+                        <div class="more">
+                            <a href="media.html"><h3>閱讀更多</h3></a>
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </div>
