--- a/蘵感ZanGan上傳/signup suc.html
+++ b/蘵感ZanGan上傳/signup suc.html
@@ -56,7 +56,7 @@
         </nav>
     </div>
 
-    <!-- signup -->
+    <!-- signup suc-->
     <main id="signup0">
         <!-- 上面導覽列 -->
         <nav>
@@ -70,6 +70,19 @@
             <!-- 左邊課程或活動下拉選單 -->
             <div>
                 <!-- 小標題區 -->
+                <!-- +++ -->
+                <!-- <div class="area"> -->
+                    <!-- <div class="subtitle">
+                        <h4>課程</h4>
+                        <h4>活動/工作坊</h4>
+                    </div>
+                    <div class="hr">
+                        <hr>
+                    </div> -->
+                <!-- </div> -->
+
+
+                <!-- 原本 -->
                 <div class="item">
                     <span class="box1">
                         <h4>課程</h4>
@@ -152,9 +165,11 @@
                     </span>
                 </div>
                 <!-- 送出 -->
-               <button>
-                    <a href="cart.html"><h3>送出</h3></a>
-               </button>
+                <button>
+                    <a href="cart.html">
+                        <h3>送出</h3>
+                    </a>
+                </button>
             </div>
         </div>
 
