--- a/蘵感ZanGan上傳/signup.html
+++ b/蘵感ZanGan上傳/signup.html
@@ -116,13 +116,13 @@
             <div class="nav2">
                 <!-- 小標題區 -->
                 <div class="item">
-                    <span class="box1">
-                        <h4>已添加的課程/活動</h4>
+                    <span class="box1 box11">
+                        <h4 >已添加的課程/活動</h4>
                         <hr>
                     </span>
                 </div>
                 <!-- 右邊小區塊  -->
-                <div class="list2">
+                <div class="list2 list22">
                     <img src="img/index/index-course/logo（橢圓綜）.svg" width="55" height="90" alt="">
                     <h2>清單內尚未添加課程/活動</h2>
                 </div>
@@ -130,7 +130,7 @@
         </div>
     </main>
 
-    <!-- 8.footer -->
+    <!-- footer -->
     <div id="footer">
         <div class="footer_ul">
             <!-- 第一欄 -->
