--- a/蘵感ZanGan上傳/cart.html
+++ b/蘵感ZanGan上傳/cart.html
@@ -155,13 +155,17 @@
         <div class="sent">
             <button>
                 <a href="#">
-                    <a href="reserve.html"><h3>送出預約訂單</h3></a>
+                    <a href="reserve.html">
+                        <h3>送出預約訂單</h3>
+                    </a>
                 </a>
             </button>
         </div>
         <!-- 上一個步驟 -->
         <div class="more">
-            <h3>Prev Step</h3>
+            <a href="signup suc.html">
+                <h3>Prev Step</h3>
+            </a>
             <img src="img/news/left arrow.svg" alt="">
         </div>
         </span>
