--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="noindex,nofollow" />
     <title>蘵感ZanGan</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <script src="Javascript.js"></script> -->
+    <script src="script.js"></script>
 
 </head>
 
@@ -189,7 +189,7 @@
                     <span>
                         <h3>藝術插花</h3>
                     </span>
-                    <div>
+                    <div class="arrow_bk">
                         <a href="course_flower.html">
                             <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
                         </a>
@@ -317,83 +317,186 @@
             <h1>蘵感 <pr>專業師資 </h1>
             <hr>
         </div>
-        <ul>
+        <div class="track">
             <!--師資Jaclyn Wu  -->
-            <li>
-                <div class="teachers_box">
-                    <div>
-                        <h2>Jaclyn Wu</h2>
-                        <div class="people pos">
-                            <img src="img/index/index-teachers/師資Wu.png" alt="">
-                        </div>
-                    </div>
-                    <div class="teachers_good">
-                        <h4 class="teachers_college">英國普頓大學花藝系所碩士 </h4>
-                        <h4 class="teachers_best">擅長法式層次、自然風格盆花</h4>
+            <!-- <li> -->
+            <div class="teachers_box">
+                <div>
+                    <h2>Jaclyn Wu</h2>
+                    <div class="people pos">
+                        <img src="img/index/index-teachers/師資Wu.png" alt="">
                     </div>
                 </div>
-            </li>
+                <div class="teachers_good">
+                    <h4 class="teachers_college">英國普頓大學花藝系所碩士 </h4>
+                    <h4 class="teachers_best">擅長法式層次、自然風格盆花</h4>
+                </div>
+            </div>
+            <!-- </li> -->
             <!--師資Tomoko Liu  -->
-            <li>
-                <div class="teachers_box">
-                    <div>
-                        <h2>Tomoko Liu</h2>
-                        <div class="people pos ">
-                            <img src="img/index/index-teachers/師資Liu.png" alt="">
-                        </div>
-                    </div>
-                    <div class="teachers_good">
-                        <h4 class="teachers_college">德國包浩斯材質創新學士 </h4>
-                        <h4 class="teachers_best another">異材質飾品品創作專業</h4>
+            <!-- <li> -->
+            <div class="teachers_box">
+                <div>
+                    <h2>Tomoko Liu</h2>
+                    <div class="people pos ">
+                        <img src="img/index/index-teachers/師資Liu.png" alt="">
                     </div>
                 </div>
-            </li>
+                <div class="teachers_good">
+                    <h4 class="teachers_college">德國包浩斯材質創新學士 </h4>
+                    <h4 class="teachers_best another">異材質飾品品創作專業</h4>
+                </div>
+            </div>
+            <!-- </li> -->
             <!--師資Peter  Chen  -->
-            <li>
-                <div class="teachers_box">
-                    <div>
-                        <h2>Peter Chen</h2>
-                        <div class="people pos">
-                            <img src="img/index/index-teachers/師資Chen.png" alt="">
-                        </div>
-                    </div>
-                    <div class="teachers_good">
-                        <h4 class="teachers_college">加拿大多倫多大學設計學士 </h4>
-                        <h4 class="teachers_best another_chen">現代風格，擅長融合材料和色彩</h4>
+            <!-- <li> -->
+            <div class="teachers_box">
+                <div>
+                    <h2>Peter Chen</h2>
+                    <div class="people pos">
+                        <img src="img/index/index-teachers/師資Chen.png" alt="">
                     </div>
                 </div>
-            </li>
+                <div class="teachers_good">
+                    <h4 class="teachers_college">加拿大多倫多大學設計學士 </h4>
+                    <h4 class="teachers_best another_chen">現代風格，擅長融合材料和色彩</h4>
+                </div>
+            </div>
+            <!-- </li> -->
             <!--師資Ablega Hang  -->
-            <li>
-                <div class="teachers_box">
-                    <div>
-                        <h2>Ablega Hang</h2>
-                        <div class="people pos">
-                            <img src="img/index/index-teachers/師資Hang.png" alt="">
-                        </div>
-                    </div>
-                    <div class="teachers_good">
-                        <h4 class="teachers_college">日本新宿調理師專門學校 </h4>
-                        <h4 class="teachers_best another_hang">擅長日是糕點和菓子專業</h4>
+            <!-- <li> -->
+            <div class="teachers_box">
+                <div>
+                    <h2>Ablega Hang</h2>
+                    <div class="people pos">
+                        <img src="img/index/index-teachers/師資Hang.png" alt="">
                     </div>
                 </div>
-            </li>
+                <div class="teachers_good">
+                    <h4 class="teachers_college">日本新宿調理師專門學校 </h4>
+                    <h4 class="teachers_best another_hang">擅長日是糕點和菓子專業</h4>
+                </div>
+            </div>
+            <!-- </li> -->
             <!--師資Ruta Rio  -->
-            <li>
-                <div class="teachers_box">
-                    <div>
-                        <h2>Ruta Rio</h2>
-                        <div class="people pos">
-                            <img src="img/index/index-teachers/師資Rio.png" alt="">
-                        </div>
-                    </div>
-                    <div class="teachers_good">
-                        <h4 class="teachers_college">日本東京大學茶道研究所碩士 </h4>
-                        <h4 class="teachers_best">擅長教授茶道禮儀及藝術技巧</h4>
+            <!-- <li> -->
+            <div class="teachers_box">
+                <div>
+                    <h2>Ruta Rio</h2>
+                    <div class="people pos">
+                        <img src="img/index/index-teachers/師資Rio.png" alt="">
                     </div>
                 </div>
-            </li>
-        </ul>
+                <div class="teachers_good">
+                    <h4 class="teachers_college">日本東京大學茶道研究所碩士 </h4>
+                    <h4 class="teachers_best">擅長教授茶道禮儀及藝術技巧</h4>
+                </div>
+            </div>
+            <!-- </li> -->
+            <!--師資Diana Hang  -->
+            <!-- <li> -->
+            <div class="teachers_box">
+                <div>
+                    <h2>Diana Hang</h2>
+                    <div class="people pos">
+                        <img src="img/index/index-teachers/師資Diana.png" alt="">
+                    </div>
+                </div>
+                <div class="teachers_good">
+                    <h4 class="teachers_college">法國佩里大學感官研究碩士 </h4>
+                    <h4 class="teachers_best another_diana">擅長客製化香水調製</h4>
+                </div>
+            </div>
+            <!-- </li> -->
+            <!-- 第二輪 -->
+            <div class="teachers_box">
+                <div>
+                    <h2>Jaclyn Wu</h2>
+                    <div class="people pos">
+                        <img src="img/index/index-teachers/師資Wu.png" alt="">
+                    </div>
+                </div>
+                <div class="teachers_good">
+                    <h4 class="teachers_college">英國普頓大學花藝系所碩士 </h4>
+                    <h4 class="teachers_best">擅長法式層次、自然風格盆花</h4>
+                </div>
+            </div>
+            <!-- </li> -->
+            <!--師資Tomoko Liu  -->
+            <!-- <li> -->
+            <div class="teachers_box">
+                <div>
+                    <h2>Tomoko Liu</h2>
+                    <div class="people pos ">
+                        <img src="img/index/index-teachers/師資Liu.png" alt="">
+                    </div>
+                </div>
+                <div class="teachers_good">
+                    <h4 class="teachers_college">德國包浩斯材質創新學士 </h4>
+                    <h4 class="teachers_best another">異材質飾品品創作專業</h4>
+                </div>
+            </div>
+            <!-- </li> -->
+            <!--師資Peter  Chen  -->
+            <!-- <li> -->
+            <div class="teachers_box">
+                <div>
+                    <h2>Peter Chen</h2>
+                    <div class="people pos">
+                        <img src="img/index/index-teachers/師資Chen.png" alt="">
+                    </div>
+                </div>
+                <div class="teachers_good">
+                    <h4 class="teachers_college">加拿大多倫多大學設計學士 </h4>
+                    <h4 class="teachers_best another_chen">現代風格，擅長融合材料和色彩</h4>
+                </div>
+            </div>
+            <!-- </li> -->
+            <!--師資Ablega Hang  -->
+            <!-- <li> -->
+            <div class="teachers_box">
+                <div>
+                    <h2>Ablega Hang</h2>
+                    <div class="people pos">
+                        <img src="img/index/index-teachers/師資Hang.png" alt="">
+                    </div>
+                </div>
+                <div class="teachers_good">
+                    <h4 class="teachers_college">日本新宿調理師專門學校 </h4>
+                    <h4 class="teachers_best another_hang">擅長日是糕點和菓子專業</h4>
+                </div>
+            </div>
+            <!-- </li> -->
+            <!--師資Ruta Rio  -->
+            <!-- <li> -->
+            <div class="teachers_box">
+                <div>
+                    <h2>Ruta Rio</h2>
+                    <div class="people pos">
+                        <img src="img/index/index-teachers/師資Rio.png" alt="">
+                    </div>
+                </div>
+                <div class="teachers_good">
+                    <h4 class="teachers_college">日本東京大學茶道研究所碩士 </h4>
+                    <h4 class="teachers_best">擅長教授茶道禮儀及藝術技巧</h4>
+                </div>
+            </div>
+            <!-- </li> -->
+            <!--師資Diana Hang  -->
+            <!-- <li> -->
+            <div class="teachers_box">
+                <div>
+                    <h2>Diana Hang</h2>
+                    <div class="people pos">
+                        <img src="img/index/index-teachers/師資Diana.png" alt="">
+                    </div>
+                </div>
+                <div class="teachers_good">
+                    <h4 class="teachers_college">法國佩里大學感官研究碩士 </h4>
+                    <h4 class="teachers_best another_diana">擅長客製化香水調製</h4>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- 6.news  -->
@@ -497,7 +600,9 @@
                         <span class="img"><img src="img/index/index-media/media1.png" alt=""></span>
                         <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知<br>道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                         <div class="more">
-                            <a href="media_page_nov.html"><h3>閱讀更多</h3></a>
+                            <a href="media_page_nov.html">
+                                <h3>閱讀更多</h3>
+                            </a>
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </li>
@@ -508,7 +613,9 @@
                         <span class="img"><img src="img/index/index-media/media3.png" alt=""></span>
                         <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知<br>道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                         <div class="more">
-                            <a href="media.html"><h3>閱讀更多</h3></a>
+                            <a href="media.html">
+                                <h3>閱讀更多</h3>
+                            </a>
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </li>
@@ -523,7 +630,9 @@
                     <span class="img"><img src="img/index/index-media/media2.png" alt=""></span>
                     <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知<br>道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                     <div class="more">
-                        <a href="media.html"><h3>閱讀更多</h3></a>
+                        <a href="media.html">
+                            <h3>閱讀更多</h3>
+                        </a>
                         <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                     </div>
                 </li>
@@ -534,7 +643,9 @@
                     <span class="img"><img src="img/index/index-media/media4.png" alt=""></span>
                     <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                     <div class="more">
-                        <a href="media.html"><h3>閱讀更多</h3></a>
+                        <a href="media.html">
+                            <h3>閱讀更多</h3>
+                        </a>
                         <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                     </div>
                 </li>
@@ -548,7 +659,9 @@
                     <span class="img"><img src="img/index/index-media/media6.png" alt=""></span>
                     <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                     <div class="more">
-                        <a href="media.html"><h3>閱讀更多</h3></a>
+                        <a href="media.html">
+                            <h3>閱讀更多</h3>
+                        </a>
                         <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                     </div>
                 </li>
@@ -560,7 +673,9 @@
                     <span class="img"><img src="img/index/index-media/media5.png" alt=""></span>
                     <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                     <div class="more">
-                        <a href="media.html"><h3>閱讀更多</h3></a>
+                        <a href="media.html">
+                            <h3>閱讀更多</h3>
+                        </a>
                         <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                     </div>
                 </li>
