--- a/z0511/news.html
+++ b/z0511/news.html
@@ -6,160 +6,137 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>蘵感最新消息</title>
-    <link rel="stylesheet" href="news media.css">
+    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="pages.css"> -->
 </head>
 
 <body>
-    <!-- 精簡code+a+svg+btn-->
-    <!-- 1.2topbar green-->
-    <div id="topbar">
-        <nav>
+    <!-- topbar 首頁區  -->
+    <header id="topbar">
+        <!-- 漢堡按鈕 -->
+        <div class="nav_box">
+            <!-- <button class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button> -->
             <ul class="menu">
-                <li><a href="about.html">關於蘵感</a></li>
-                <li><a href="news.html">最新消息</a></li>
-                <li><a href="course.html">課程介紹</a></li>
-                <li><a href="media.html">蘵感文章</a></li>
+                <li><a href="about.html">
+                        <h3>關於蘵感</h3>
+                    </a></li>
+                <li><a href="news.html">
+                        <h3>最新消息</h3>
+                    </a></li>
+                <li><a href="course.html">
+                        <h3>課程介紹</h3>
+                    </a></li>
+                <li><a href="media.html">
+                        <h3>蘵感文章</h3>
+                    </a></li>
             </ul>
-        </nav>
-        <h1 class="logo">
-            <a href="index.html">
-                <img src="img/index/index-topbar/cn-logo1.svg" alt="logo">
-            </a>
-        </h1>
-        <nav>
+        </div>
+        <a href="index.html" class="logo">
+            <img src="img/index/index-topbar/logo.svg" alt="">
+        </a>
+        <!-- 選單列 -->
+        <nav class="navigation">
             <ul class="icon">
-                <li class="box">
-                    <div>
-                        <div class="m_btn">
-                            <a href="signup.html">快速報名</a>
-                            <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
-                    <span><a href="login.html">登入</a></span>
-                </li>
-                <li>
-                    <a href="cart.html">
-                        <img src="img/index/index-topbar/cart.svg" alt="購物車">
+                <li><a href="signup.html" class="icon_signup">
+                        <h3>快速報名</h3>
+                        <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
+                    </a></li>
+                <li><a href="login.html" class="icon_login">
+                        <img src="img/index/index-topbar/user.svg" alt="">
+                        <h3>登入</h3>
                     </a>
                 </li>
+                <li><a href="cart.html"><img src="img/index/index-topbar/cart.svg" alt="" width="40" height="40"></a>
+                </li>
             </ul>
         </nav>
-    </div>
+    </header>
 
-    <!-- 2.news  -->
-    <!-- 最新消息 -->
+    <!-- news_content  -->
     <div id="news_content">
-        <!-- test -->
         <div class="title">
             <section>
                 <h3>NEWS</h3>
                 <h1>最新消息</h1>
             </section>
             <ul>
-                <li><a href="">全部消息</a></li>
-                <li><a href="">活動快訊</a></li>
-                <li><a href="">課程異動</a></li>
+                <li><a href="#">全部消息</a></li>
+                <li><a href="#">活動快訊</a></li>
+                <li><a href="#">課程異動</a></li>
             </ul>
         </div>
         <div class="nc_main">
             <!-- 圖片 -->
             <div class="img2">
-                <img src="img/index/index-news/news_img.png" alt="" width="300" height="600">
+                <img src="img/news/img.png" alt="">
             </div>
             <div class="news_col">
-                <!-- <span> -->
-                    <td>
-                        <!-- section  -->
-                        <!-- 一個日期+最新消息標題 -->
-                        <div class="news_news">
-                            <tr>
-                                <p>
-                                <div class="news_date"> 2023.1.16 <br> </div>
-                                <div class="news_text"> 【活動快訊】 11月美學下午茶報名開始了！</div>
-                                <div class="news_hr">
-                                    <hr>
-                                </div>
-                                <div class="news_img">
-                                    <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg"
-                                            alt=""></a>
-                                </div>
-                                </p>
-                            </tr>
+                <td>
+                    <!-- section  -->
+                    <div class="news_news">
+                        <div class="hr1">
+                            <hr>
                         </div>
-                        <div class="news_news">
-                            <tr>
-                                <p></p>
-                                <div class="news_date"> 2023.1.16 <br> </div>
-                                <div class="news_text"> 【課程快訊】 10月特別推出「DIY皮革工藝」快閃課程，不可錯過！</div>
-                                <!-- test -->
-                                <!-- <h3> 2023.1.16</h3>
-                        <h2>【課程快訊】 10月特別推出「DIY皮革工藝」快閃課程，不可錯過！</h2> -->
-                                <div class="news_hr">
-                                    <hr>
-                                </div>
-                                <div class="news_img">
-                                    <a href="news_page_oct.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                                </div>
-                                </p>
-                            </tr>
-                        </div>
-                        <div class="news_news">
-                            <tr>
-                                <p>
-                                <div class="news_date"> 2023.1.16 <br> </div>
-                                <div class="news_text"> 【課程快訊】手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</div>
-                                <div class="news_hr">
-                                    <hr>
-                                </div>
-                                <div class="news_img">
-                                    <a href="news_page_flower.html"><img src="img/index/index-news/arrow(白).svg"
-                                            alt=""></a>
-                                </div>
-                                </p>
-                            </tr>
-                        </div>
-                        <div class="news_news">
-                            <tr>
-                                <p>
-                                <div class="news_date"> 2023.1.16 <br> </div>
-                                <div class="news_text"> 【課程異動】 11/20花藝、手作香水下午班，停課一次。</div>
-                                <div class="news_hr">
-                                    <hr>
-                                </div>
-                                <div class="news_img">
-                                    <a href="news_page_stop.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                                </div>
-                                </p>
-                            </tr>
-                        </div>
-                        <div class="news_news">
-                            <tr>
-                                <p>
-                                <div class="news_date"> 2023.1.16 <br> </div>
-                                <div class="news_text"> 【課程異動】11/20 藝術油畫下午班，停課一次。</div>
-                                <div class="news_hr">
-                                    <hr>
-                                </div>
-                                <div class="news_img">
-                                    <a href="news_page_stoppaint.html"><img src="img/index/index-news/arrow(白).svg"
-                                            alt=""></a>
-                                </div>
-                                </p>
-                            </tr>
-                        </div>
-                    </td>
-                <!-- </span> -->
+                        <tr>
+                            <p>
+                            <div class="news_date"> 2023.1.16 <br> </div>
+                            <div class="news_text">[活動快訊]11月美學下午茶報名開始了！</div>
+                            <hr>
+                                <a href="news_page_nov.html" class="news_img"></a>
+                            </p>
+                        </tr>
+                    </div>
+                    <div class="news_news">
+                        <tr>
+                            <p>
+                            <div class="news_date"> 2023.1.16 <br> </div>
+                            <div class="news_text">[活動快訊]11月美學下午茶報名開始了！</div>
+                            <hr>
+                                <a href="news_page_nov.html" class="news_img"></a>
+                            </p>
+                        </tr>
+                    </div>
+                    <div class="news_news">
+                        <tr>
+                            <p>
+                            <div class="news_date"> 2023.1.16 <br> </div>
+                            <div class="news_text">[活動快訊]11月美學下午茶報名開始了！</div>
+                            <hr>
+                                <a href="news_page_nov.html" class="news_img"></a>
+                            </p>
+                        </tr>
+                    </div>
+                    <div class="news_news">
+                        <tr>
+                            <p>
+                            <div class="news_date"> 2023.1.16 <br> </div>
+                            <div class="news_text">[活動快訊]11月美學下午茶報名開始了！</div>
+                            <hr>
+                                <a href="news_page_nov.html" class="news_img"></a>
+                            </p>
+                        </tr>
+                    </div>
+                    <div class="news_news">
+                        <tr>
+                            <p>
+                            <div class="news_date"> 2023.1.16 <br> </div>
+                            <div class="news_text">[活動快訊]11月美學下午茶報名開始了！</div>
+                            <hr>
+                                <a href="news_page_nov.html" class="news_img"></a>
+                            </p>
+                        </tr>
+                    </div>
+                </td>
             </div>
         </div>
     </div>
 
-    <!-- +a -->
-    <!-- 8.footer -->
+    <!-- footer -->
     <div id="footer">
-        <!-- <div class="all_section"> -->
         <div class="footer_ul">
             <!-- 第一欄 -->
             <ul>
@@ -187,17 +164,21 @@
                             <!-- &nbsp;空白,可以一直增加 -->
                             <p>
                             <h3>
-                                32462 <br>
-                                台北市枕頭村乃貓巷第一個盆栽下 3F<br>
-                                電話號碼&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;02-9900206<br>
-                                營業時間&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;10:30-20:00<br>
-                                公休日&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;星期二/三 (國定假期)<br>
+                                <div class="addr">
+                                    32462 <br>
+                                    台北市枕頭村乃貓巷第一個盆栽下 3F
+                                </div>
+                                <div class="time">
+                                    <h3>電話號碼&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;02-9900206</h3>
+                                    <h3>營業時間&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;10:30-20:00</h3>
+                                    <h3>公休日&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;星期二/三 (國定假期)</h3>
+                                </div>
                             </h3>
                             </p>
                         </li>
                     </div>
                     <div class="footer_main">
-                        <li>
+                        <li class="icon_soc">
                             <img src="img/index/index-footer/社群軟體icon.svg" alt="">
                         </li>
                     </div>
@@ -215,7 +196,7 @@
                         </li>
                     </div>
                     <div class="footer_main">
-                        <li>
+                        <li class="faq">
                             <a href="faq.html">
                                 <h1> FAQ</h1>
                             </a>
