--- a/蘵感ZanGan上傳/signup.html
+++ b/蘵感ZanGan上傳/signup.html
@@ -10,9 +10,15 @@
 </head>
 
 <body>
-    <!-- 1.2topbar green 精簡+100%-->
-    <div id="topbar">
-        <nav>
+    <!-- topbar 首頁區  -->
+    <header id="topbar">
+        <!-- 漢堡按鈕 -->
+        <div class="nav_box">
+            <!-- <button class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button> -->
             <ul class="menu">
                 <li><a href="about.html">
                         <h3>關於蘵感</h3>
@@ -27,36 +33,27 @@
                         <h3>蘵感文章</h3>
                     </a></li>
             </ul>
-        </nav>
-        <h1 class="logo">
-            <a href="index.html">
-                <img src="img/index/index-topbar/cn-logo1.svg" alt="logo">
-            </a>
-        </h1>
-        <nav>
+        </div>
+        <a href="index.html" class="logo">
+            <img src="img/index/index-topbar/logo.svg" alt="">
+        </a>
+        <!-- 選單列 -->
+        <nav class="navigation">
             <ul class="icon">
-                <li class="signup">
-                    <a href="signup.html">
+                <li><a href="signup.html" class="icon_signup">
                         <h3>快速報名</h3>
-                    </a>
-                    <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
-                </li>
-                <li>
-                    <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
-                    <span>
-                        <a href="login.html">
-                            <h3> 登入</h3>
-                        </a>
-                    </span>
-                </li>
-                <li>
-                    <a href="cart.html">
-                        <img src="img/index/index-topbar/cart.svg" alt="購物車">
+                        <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
+                    </a></li>
+                <li><a href="login.html" class="icon_login">
+                        <img src="img/index/index-topbar/user.svg" alt="">
+                        <h3>登入</h3>
                     </a>
                 </li>
+                <li><a href="cart.html"><img src="img/index/index-topbar/cart.svg" alt="" width="40" height="40"></a></li>
             </ul>
         </nav>
-    </div>
+    </header>
+
 
     <!-- signup -->
     <main id="signup0">
@@ -105,8 +102,9 @@
                 <!-- 加入預約清單 -->
                 <div class="list">
                     <h4>加入預約清單</h4>
-                    <a href="signup suc.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                    <a href="signup suc.html" class="arrow_w"></a>
                 </div>
+                
             </div>
             <!-- 垂直線 -->
             <span class="vline">
