--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style0601.css"> -->
     <title>蘵感ZanGan</title>
 </head>
 <body>
@@ -18,16 +19,16 @@
                 <span class="bar"></span>
             </button> -->
             <ul class="menu">
-                <li><a href="#">
+                <li><a href="about.html">
                         <h3>關於蘵感</h3>
                     </a></li>
-                <li><a href="#">
+                <li><a href="news.html">
                         <h3>最新消息</h3>
                     </a></li>
-                <li><a href="#">
+                <li><a href="course.html">
                         <h3>課程介紹</h3>
                     </a></li>
-                <li><a href="#">
+                <li><a href="media.html">
                         <h3>蘵感文章</h3>
                     </a></li>
             </ul>
@@ -38,16 +39,16 @@
         <!-- 選單列 -->
         <nav class="navigation">
             <ul class="icon">
-                <li><a href="#" class="icon_signup">
+                <li><a href="signup.html" class="icon_signup">
                         <h3>快速報名</h3>
                         <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
                     </a></li>
-                <li><a href="#" class="icon_login">
+                <li><a href="login.html" class="icon_login">
                         <img src="img/index/index-topbar/user.svg" alt="">
                         <h3>登入</h3>
                     </a>
                 </li>
-                <li><a href="#"><img src="img/index/index-topbar/cart.svg" alt="" width="40" height="40"></a></li>
+                <li><a href="cart.html"><img src="img/index/index-topbar/cart.svg" alt="" width="40" height="40"></a></li>
             </ul>
         </nav>
     </header>
@@ -716,7 +717,7 @@
                         </li>
                     </div>
                     <div class="footer_main">
-                        <li>
+                        <li class="icon_soc">
                             <img src="img/index/index-footer/社群軟體icon.svg" alt="">
                         </li>
                     </div>
