--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -59,6 +59,7 @@
         <div class="bgvideo">
             <video src="img/index/index-banner/banner-video.mp4" autoplay muted loop></video>
         </div>
+        <!-- <figure><img src="img/index/index-banner/banner img.png" alt=""></figure> -->
         <!-- 主要區塊 -->
         <div class="sec">
             <div>
@@ -71,7 +72,7 @@
                 <div class="more">
                     <h3>查看課程</h3>
                     <a href="course.html">
-                        <img src="img/index/index-banner/arrow(白).svg" alt="">
+                        <img src="img/index/index-banner/arrow(白).svg"  alt="">
                     </a>
                 </div>
             </div>
