--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="style0601.css"> -->
     <title>蘵感ZanGan</title>
 </head>
 <body>
@@ -153,7 +152,7 @@
                 </div>
             </li>
             <div class="bg_logo">
-                <img src="img/index/index-about/EN-logo.svg" width="90%" alt="">
+                <img src="img/index/index-about/EN-logo.svg" alt="">
             </div>
         </ul>
         <ul class="img_area">
@@ -748,21 +747,13 @@
         </div>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!-- jQuery Core 3.7.0原始碼,一定要放在最上面,先被執行 -->
+<script src="https://code.jquery.com/jquery-3.7.0.min.js"
+integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<!-- jquery smoove套件 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smoove/0.2.10/jquery.smoove.min.js"></script>
+<!-- 自訂的js,一定要放在最下面,最後被執行 -->
+<script src="script.js"></script>
 
 
 </body>
