--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -671,7 +671,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        <!-- </div> -->
     </div>
 
     <!-- 8.footer -->
