--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -300,7 +300,6 @@
                 </div>
             </li>
         </ul>
-
     </div>
 
     <!-- 5.teachers -->
@@ -310,9 +309,9 @@
             <h1>蘵感 <pr>專業師資 </h1>
             <hr>
         </div>
-        <!-- <div class="bglogo">
+        <div class="bglogo">
             <img src="img/index/index-teachers/logo(棕色).svg" alt="">
-        </div> -->
+        </div>
         <div class="track">
             <!--師資Jaclyn Wu  -->
             <!-- <li> -->
@@ -576,7 +575,7 @@
 
      <!-- 7.media -->
      <div id="media">
-        <!-- <div class="sect"> -->
+        <div class="sect">
             <!-- 上方導覽區塊  -->
             <div class="nav">
                 <div class="span">
@@ -592,11 +591,11 @@
             <div class="main">
                 <div>
                     <ul>
-                        <li>
+                        <li class="item1">
                             <h3><span class="date">2023.1.16</span></h3>
                             <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學習吧！</h2>
                             <span class="img"><img src="img/index/index-media/media1.png" alt=""></span>
-                            <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知<br>道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                            <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                             <div class="more">
                                 <a href="media_page_nov.html">
                                     <h3>閱讀更多</h3>
@@ -604,11 +603,11 @@
                                 <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                             </div>
                         </li>
-                        <li>
+                        <li class="item4">
                             <h3><span class="date">2023.1.16</span></h3>
                             <h2>【蘵感花藝學院】給新手的插花先行課，選擇最適合的花藝風格！</h2>
                             <span class="img"><img src="img/index/index-media/media3.png" alt=""></span>
-                            <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知<br>道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                            <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                             <div class="more">
                                 <a href="media.html">
                                     <h3>閱讀更多</h3>
@@ -619,11 +618,11 @@
                     </ul>
                 </div>
                 <ul>
-                    <li>
+                    <li class="item2">
                         <h3><span class="date">2023.1.16</span></h3>
                         <h2>【2023最新】手作愛好者必看！五大手作種類與課程介紹</h2>
                         <span class="img"><img src="img/index/index-media/media2.png" alt=""></span>
-                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知<br>道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
                         <div class="more">
                             <a href="media.html">
                                 <h3>閱讀更多</h3>
@@ -631,7 +630,7 @@
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </li>
-                    <li>
+                    <li class="item5">
                         <h3><span class="date">2023.1.16</span></h3>
                         <h2>無法出國，好想穿和服吃日式糕點！ 在家如何製作日式點心！</h2>
                         <span class="img"><img src="img/index/index-media/media4.png" alt=""></span>
@@ -645,7 +644,7 @@
                     </li>
                 </ul>
                 <ul>
-                    <li>
+                    <li class="item3">
                         <h3><span class="date">2023.1.16</span></h3>
                         <h2>【好評回饋】感謝報導，蘵感工作室提供生活新型型態的體驗活動！</h2>
                         <span class="img"><img src="img/index/index-media/media6.png" alt=""></span>
@@ -657,7 +656,7 @@
                             <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </li>
-                    <li>
+                    <li class="item6">
                         <h3><span class="date">2023.1.16</span></h3>
                         <h2>【好評回饋】，知名網紅兩孩子的媽Dolly一日驗體</h2>
                         <span class="img"><img src="img/index/index-media/media5.png" alt=""></span>
@@ -671,7 +670,7 @@
                     </li>
                 </ul>
             </div>
-        <!-- </div> -->
+        </div>
     </div>
 
     <!-- 8.footer -->
@@ -699,7 +698,7 @@
                 <div class="footer_li">
                     <div class="footer_nav">
                         <li>
-                            <h1> Access</h1>
+                            <h1 class="eng"> Access</h1>
                             <!-- &nbsp;空白,可以一直增加 -->
                             <p>
                             <h3>
@@ -727,9 +726,9 @@
             <ul>
                 <div class="footer_li">
                     <div class="footer_nav">
-                        <li>
+                        <li class="contact">
                             <a href="contact.html">
-                                <h1> Contact</h1>
+                                <h1 class="eng"> Contact</h1>
                             </a>
                             <h3> 有什麼想詢問的嗎?</h3>
                         </li>
