--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>蘵感ZanGan</title>
 </head>
+
 <body>
     <!-- topbarw 首頁區  -->
     <header id="topbarw">
@@ -47,7 +49,8 @@
                         <h3>登入</h3>
                     </a>
                 </li>
-                <li><a href="cart.html"><img src="img/index/index-topbar/cart.svg" alt="" width="40" height="40"></a></li>
+                <li><a href="cart.html"><img src="img/index/index-topbar/cart.svg" alt="" width="40" height="40"></a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -71,7 +74,7 @@
                 <div class="more">
                     <h3>查看課程</h3>
                     <a href="course.html">
-                        <img src="img/index/index-banner/arrow(白).svg"  alt="">
+                        <img src="img/index/index-banner/arrow(白).svg" alt="">
                     </a>
                 </div>
             </div>
@@ -79,8 +82,8 @@
         </div>
     </main>
 
-     <!-- topbar 首頁區  -->
-     <header id="topbar">
+    <!-- topbar 首頁區  -->
+    <header id="topbar">
         <!-- 漢堡按鈕 -->
         <div class="nav_box">
             <!-- <button class="hamburger">
@@ -573,8 +576,8 @@
         </nav>
     </div>
 
-     <!-- 7.media -->
-     <div id="media">
+    <!-- 7.media -->
+    <div id="media">
         <div class="sect">
             <!-- 上方導覽區塊  -->
             <div class="nav">
@@ -675,6 +678,7 @@
 
     <!-- 8.footer -->
     <div id="footer">
+        <div class="blank"></div>
         <div class="footer_ul">
             <!-- 第一欄 -->
             <ul>
@@ -688,7 +692,7 @@
                     </div>
                     <div class="footer_main">
                         <li class="copyright">
-                            &copy;2023 ZanGan.aestheticsCourse
+                            &copy;ZanGan.aestheticsCourse
                         </li>
                     </div>
                 </div>
@@ -736,7 +740,7 @@
                     <div class="footer_main">
                         <li class="faq">
                             <a href="faq.html">
-                                <h1> FAQ</h1>
+                                <h1 class="eng"> FAQ</h1>
                             </a>
                             <h3> 一些常見的問題</h3>
                         </li>
@@ -746,14 +750,16 @@
         </div>
     </div>
 
-<!-- jQuery Core 3.7.0原始碼,一定要放在最上面,先被執行 -->
-<script src="https://code.jquery.com/jquery-3.7.0.min.js"
-integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-<!-- jquery smoove套件 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smoove/0.2.10/jquery.smoove.min.js"></script>
-<!-- 自訂的js,一定要放在最下面,最後被執行 -->
-<script src="script.js"></script>
+
+    <!-- jQuery Core 3.7.0原始碼,一定要放在最上面,先被執行 -->
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <!-- jquery smoove套件 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smoove/0.2.10/jquery.smoove.min.js"></script>
+    <!-- 自訂的js,一定要放在最下面,最後被執行 -->
+    <script src="script.js"></script>
 
 
 </body>
+
 </html>
